--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "water-ui",
+  "name": "feedback-ui",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://apps.rsgis.dev/water",
+  "homepage": "https://apps.rsgis.dev/feedback",
   "dependencies": {
     "@corpsmap/corpsmap-bundles": "^2.0.2",
     "@corpsmap/create-auth-bundle": "^0.3.0",
@@ -36,7 +36,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "aws s3 rm s3://corpsmap-appz/water --recursive && aws s3 cp ./build/ s3://corpsmap-appz/water --recursive"
+    "deploy-dev": "aws s3 rm s3://corpsmap-appz/feedback --recursive && aws s3 cp ./build/ s3://corpsmap-appz/feedback --recursive"
   },
   "eslintConfig": {
     "extends": "react-app"
